# phoneforge

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
deploy/: Caddyfile.snippet  install.sh  phoneforge-web.service
phoneforge/: __init__.py  browser.py  cli.py  config.py  core.py  db.py  llm.py  proxy.py
phoneforge/providers/: __init__.py  base.py  secondline.py  sms5sim.py  textfree.py  textnow.py
phoneforge/web/: __init__.py  app.py  auth.py
phoneforge/web/templates/: base.html  index.html  login.html  number_detail.html  numbers.html  services.html
phoneforge/web/templates/partials/: sms_list.html
tests/: test_smoke.py  test_sms5sim.py  test_web_auth.py
