[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phoneforge"
version = "0.1.0"
description = "On-demand US phone number provisioning via TextNow + Camoufox + OpenAI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Urgodself" }]
license = { text = "Proprietary" }
dependencies = [
    "camoufox[geoip]>=0.4.11,<0.5",
    "playwright>=1.44,<2",
    "typer[all]>=0.12.0,<0.13",
    "click>=8.1,<8.2",
    "openai>=1.40.0,<2",
    "python-dotenv>=1.0.0,<2",
    "httpx>=0.27.0,<0.28",
    "Pillow>=10.0.0,<12",
    # Web UI — FastAPI + Jinja2 + uvicorn, served behind Caddy on the VPS.
    "fastapi>=0.110.0,<0.120",
    "jinja2>=3.1.0,<4",
    "python-multipart>=0.0.9,<1",
    "itsdangerous>=2.1.0,<3",
    "uvicorn[standard]>=0.29.0,<0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.23.0,<0.24",
    "httpx>=0.27.0,<0.28",
]

[project.scripts]
phoneforge = "phoneforge.cli:app"

[tool.setuptools.packages.find]
include = ["phoneforge*"]
exclude = ["tests*", "data*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
